Suddivisione del main in section e commenti vari

--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Booleaner</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Booleaner</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+
+        <!--Logo con pattern e titolo dell'articolo-->
+        <header>
+
+
+        </header>
+
+        <main>
+
+            <!--Foto e didascalie-->
+            <section>
+
+            </section>
+
+            <!--Primo paragrafo con evidenziatura-->
+            <section>
+
+            </section>
+
+            <!--Lista non ordinata-->
+            <section>
+
+            </section>
+
+            <!--Tabella-->
+            <section>
+
+            </section>
+
+            <!--Secondo paragrafo con evidenziatura-->
+            <section>
+
+            </section>
+
+
+        </main>
+
+        <!--Link ad altri articoli-->
+        <footer>
+
+        </footer>
     
-</body>
+    </body>
 </html>
