--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
 
         <!--Logo con pattern e titolo dell'articolo-->
         <header>
+            <div id="logo">
+                
+            </div>
 
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
 
+            <div id="didascalia-titolo">
+                Scritto da <span class="blue">The Booleaner</span>
+                <br>
+                <span class="data">il 10/10/2020</span>
+            </div>
         </header>
 
         <main>
