--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
                 <br>
                 <span class="data">il 10/10/2020</span>
             </div>
+            <br>
         </header>
 
         <main>
 
             <!--Foto e didascalie-->
             <section>
+                <img src="img/tim-1.jpg" alt="Tim Berners-Lee 1">
+                <img src="img/tim-2.jpg" alt="Tim Berners-Lee 2">
+                <div>
+                    <span class="didascalia-foto">Ist Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span>
+                    <br>
+                    <span class="didascalia-foto">2nd Photo: Wikimedia, by Paul Clarke</span>
+                </div>
 
             </section>
 
