--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
                     <br>
                     <span class="didascalia-foto">2nd Photo: Wikimedia, by Paul Clarke</span>
                 </div>
-
             </section>
 
             <!--Primo paragrafo con evidenziatura-->
             <section>
-
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+                    ad minim veniam, quis nostrud <span class="yellow">exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex e commodo consequat</span>. Duis autem vel eum iriure dolor in hendrerit in
+                    vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+                    zzril delenit augue duis dolore te feugait nulla facilisi.
+                </p>
             </section>
 
             <!--Lista non ordinata-->
