Inizializzazione tabella (ancora da ultimare)

--- a/index.html
+++ b/index.html
@@ -58,7 +58,41 @@
 
             <!--Tabella-->
             <section>
-
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="lightblue">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                                placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                                eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                                placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                                eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                        </tr>
+                        <tr class="lightblue">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,
+                                placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia
+                                eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
 
             <!--Secondo paragrafo con evidenziatura-->
