Inserimento logo e pattern sottostante

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--Logo con pattern e titolo dell'articolo-->
         <header>
             <div id="logo">
-                
+                <img src="img/logo.svg" alt="Logo">
             </div>
 
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
@@ -108,7 +108,9 @@
 
         <!--Link ad altri articoli-->
         <footer>
-
+            <h4>Potrebbero interessarti</h4>
+            <h3 id="monitor">Lorem ipsum dolor</h3>
+            <h3 id="grafico">Lorem ipsum dolor</h3>
         </footer>
     
     </body>
