--- a/index.html
+++ b/index.html
@@ -108,8 +108,13 @@
         <!--Link ad altri articoli-->
         <footer>
             <h4>Potrebbero interessarti</h4>
-            <h3 id="monitor">Lorem ipsum dolor</h3>
-            <h3 id="grafico">Lorem ipsum dolor</h3>
+            <div id="monitor">
+                <h3>Lorem ipsum dolor</h3>
+            </div>
+            <br>
+            <div id="grafico">
+                <h3>Lorem ipsum dolor</h3>
+            </div>
         </footer>
     
     </body>
